Ajusta Autenticação pelo Swagger
